fixed mobile image overflow

--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
 
 .mobile {
   padding-top: 30px;
-  padding-left: 5px;
+  padding-left: 10px;
   position: absolute;
 }
 
@@ -54,7 +54,7 @@ body {
   padding-top: 7rem;
   display: flex;
   align-items: center;
-  padding-left: 20rem;
+  padding-left: 10rem;
 }
 
 .input-display {
